# quacc

./: .codacy.yaml  .codecov.yaml  .codecov.yml  .coderabbit.yaml  .deepsource.toml  .gitignore  .jenkinsfile  .mega-linter.yml  .pre-commit-config.yaml  .sourcery.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  H_NCP19_PBE_OTF.usp  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  _zensical.toml  conda_codes.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  search.js  search.json  setup.py  sitemap.xml
.config/: README.md
.config/fw_config/: my_fworker.yaml
.github/: .codecov.yml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  check_env.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  docs.md  docs.yaml  idea.md  idea.yaml  issue.md  issue.yaml  misc.yaml
.github/scripts/: gen_ref_pages.py  gen_zensical_toml.py
.github/workflows/: big_tests.yaml  claude.yml  codecov.yaml  dependabot.yaml  deploy.yaml  deploy_docs.yaml  deploy_pypi.yaml  docs.yaml  long_tests.yaml  mega-linter.yaml  megalinter.yaml  release.yaml  sourcery.yaml  test.yaml  testing.yaml  tests.yaml  tests_light.yaml  workflow.yaml
about/: changelog.html  conduct.html  contributors.html  faq.html  license.html
custodian_settings/vasp/: vasp_custodian_settings.yaml
default_calcs/vasp/: slab_relax_set.json
dev/: contributing.html  docs.html
dev/recipes/: flows.html  jobs.html
docs/: gen_ref_pages.py  index.md
docs/about/: changelog.md  contributors.md  faq.md  license.md
docs/dev/: _internal.md  contributing.md  docs.md
docs/install/: codes.md  config_db.md  covalent.md  install.md  wflow_engines.md
docs/maintainers/: internal.md
docs/reference/: calculators.md  reference.md
docs/references/: calculators.md
docs/src/: conf.py  index.md  index.rst
docs/start/: demo.md
docs/stylesheets/: extra.css
docs/user/: atomate2.md  basics.md  database.md  executors.md  file_transfer.md  file_transfers.md  recipes_intro.md  settings.md  wflow_engines.md  wflow_overview.md  wflow_syntax.md
examples/: basics.md  slabs.py
htase/: ht_ase.py
htase/custodian/: run_vasp_custodian.py
htase/schemas/: atoms.py  calc.py  cclib.py  vasp.py
htase/setup/: instructions.md
htase/util/: atoms.py  calc.py  pop_analysis.py  slabs.py  yaml.py
htase/utilities/: atoms.py  calc.py
htase/vasp/: run_vasp_custodian.py
install/: codes.html  install.html  wflow_engines.html
maintainers/: internal.html
quacc/: __init__.py  _version.py  cli.py  settings.py
quacc/_cli/: cli.py
quacc/calculators/: __init__.py  qchem.py  vasp.py  vasp_utils.py
quacc/custodian/: __init__.py  qchem.py  run_vasp_custodian.py  vasp.py
quacc/presets/: __init__.py
quacc/recipes/: __init__.py  core.py  slabs.py
quacc/schemas/: __init__.py  ase.py  atoms.py  calc.py  cclib.py  vasp.py
quacc/setup/: instructions.md
quacc/util/: __init__.py  atoms.py  basics.py  calc.py  db.py  defects.py  dicts.py  files.py  json.py  pop_analysis.py  slabs.py  thermo.py  wflows.py  yaml.py
quacc/utils/: calc.py  dicts.py  pop_analysis.py  slabs.py
recipes/: torchsim.html
reference/: SUMMARY.html
reference/quacc/: settings.html  types.html
search/: search_index.js  search_index.json
src/quacc/: __init__.py  settings.py  types.py
tests/: README.md  conftest.py  requirements-aiida.txt  requirements-covalent.txt  requirements-dask.txt  requirements-db.txt  requirements-defects-phonons.txt  requirements-defects.txt  requirements-docs.txt  requirements-fairchem.txt  requirements-jobflow.txt  requirements-mace.txt  requirements-matgl.txt  requirements-mlip.txt  requirements-mlips.txt  requirements-mlp-fairchem  requirements-mlp-fairchem.txt  requirements-mlp-mace-matgl.txt  requirements-mlp-mace.txt  requirements-mlp.txt  requirements-mlp1.txt  requirements-mlp2.txt  requirements-mlps.txt  requirements-mp.txt  requirements-newtonnet.txt  requirements-optimizers.txt  requirements-orb.txt  requirements-parsl.txt  requirements-phonons.txt  requirements-phonopy.txt  requirements-prefect.txt  requirements-qchem-sella-newtonnet.txt  requirements-qchem.txt  requirements-ray.txt  requirements-redun.txt  requirements-rootstock.txt  requirements-sella.txt  requirements-sevenn.txt  requirements-tblite-dftbplus-defects.txt  requirements-tblite-dftbplus.txt  (+6 more)
tests/_cli/: test_cli.py
tests/aiida/: conftest.py  quacc.yaml  test_syntax.py
tests/atoms/: test_atoms_core.py  test_slabs.py
tests/cli/: test_cli.py
tests/cli_tests/: test_cli.py
tests/core/: .quacc.yaml  conftest.py
tests/covalent/: .quacc.yaml  conftest.py  covalent.conf  quacc.yaml  test_covalent.py  test_covalent_db.py  test_covalent_recipes.py  test_covalent_syntax.py  test_covalent_tutorials.py  test_customizers.py  test_emt_recipes.py  test_espresso_recipes.py  test_syntax.py  test_tutorials.py
tests/covalent_tests/: conftest.py  test_covalent.py  test_covalent_db.py  test_covalent_syntax.py  test_covalent_tutorials.py  test_db.py  test_recipes.py  test_syntax.py
tests/custodian/: test_vasp_custodian.py
tests/custodian_tests/: test_qchem_custodian.py  test_vasp_custodian.py
tests/dask/: .quacc.yaml  conftest.py  quacc.yaml  requirements-dask.txt  test_autodiscover_paths.py  test_copy_files.py  test_customizers.py  test_dask_recipes.py  test_dask_syntax.py  test_dask_tutorials.py  test_emt_recipes.py  test_espresso_recipes.py  test_syntax.py  test_tutorials.py
tests/fireworks_tests/: test_fireworks.py
tests/jenkins/: hpc_tests.sh  quacc_test_suite.sh  run_jenkins_tests.sh
tests/jobflow/: .quacc.yaml  conftest.py  jobflow.yaml  quacc.yaml  test_ase.py  test_autodiscover_paths.py  test_basic_recipes.py  test_copy_files.py  test_customizers.py  test_emt_recipes.py  test_jobflow.py  test_jobflow_syntax.py  test_jobflow_tutorials.py  test_prep.py  test_syntax.py  test_tutorials.py
tests/jobflow_tests/: conftest.py  test_fireworks.py  test_jobflow.py  test_jobflow_syntax.py  test_jobflow_tutorials.py
tests/local/: .quacc.yaml  conftest.py
(+1187 files in other folders)
