[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quacc"
description="A platform to enable high-throughput, database-driven quantum chemistry and computational materials science"
version = "0.7.0"
readme = "README.md"
license = { text = "BSD-3" }
authors = [{ name = "Andrew S. Rosen", email = "asrosen@princeton.edu" }]
maintainers = [{ name = "Andrew S. Rosen", email = "asrosen@princeton.edu" }]
keywords = ["high-throughput", "automated", "workflow", "dft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.9, <3.13"
dependencies = [
    "ase>3.22.1", # for Atoms object and calculators
    "cclib>=1.8", # for I/O parsing of molecular DFT codes
    "custodian>=2024.3.12", # for automated error corrections
    "emmet-core>=0.78.0", # for pre-made schemas
    "maggma>=0.57.0", # for database handling
    "monty>=2024.2.26", # miscellaneous Python utilities
    "numpy>=1.25.0", # for array handling
    "psutil", # for getting compute architecture details
    "pydantic>=2.0.1", # for settings management
    "pydantic-settings>=2.2.0", # for settings management
    "pymatgen>=2024.2.20", # for structure manipulation
    "typer[all]>=0.9.0", # for the CLI
]

[project.optional-dependencies]
covalent = ["covalent>=0.234.0rc0", "covalent-cloud>=0.39.0"]
dask = ["dask[distributed]>=2023.12.1", "dask-jobqueue>=0.8.2"]
defects = ["pymatgen-analysis-defects>=2023.8.22", "shakenbreak>=3.2.0"]
jobflow = ["jobflow>=0.1.14", "jobflow-remote>=0.1.0", "fireworks>=2.0.3"]
mlp = ["matgl>=1.0.0", "chgnet>=0.3.3", "mace-torch>=0.3.3", "torch-dftd>=0.4.0"]
newtonnet = ["newtonnet>=1.1"]
parsl = ["parsl[monitoring]>=2023.10.23"]
phonons = ["phonopy>=2.20.0", "seekpath>=2.1.0"]
prefect = ["prefect>=2.14.14", "prefect-dask>=0.2.6", "dask-jobqueue>=0.8.2"]
redun = ["redun>=0.16.2"]
sella = ["sella>=2.3.3"]
tblite = ["tblite[ase]>=0.3.0; platform_system=='Linux'"]
dev = ["codecov-cli>=0.4.1", "pytest>=7.4.0", "pytest-cov>=3.0.0", "ruff>=0.0.285"]
docs = [
    "blacken-docs>=1.16.0",
    "mkdocs-material>=9.1.21",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.1"
]

[project.scripts]
quacc = "quacc._cli.quacc:app"

[project.urls]
repository = "https://github.com/Quantum-Accelerators/quacc"
documentation = "https://quantum-accelerators.github.io/quacc/"
changelog = "https://github.com/Quantum-Accelerators/quacc/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
quacc = ["py.typed"]
"quacc.calculators.vasp.presets" = ["*.yaml"]
"quacc.calculators.espresso.presets" = ["*.yaml"]

[tool.pyright]
include = ["quacc"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-p no:warnings", "--import-mode=importlib"]
xfail_strict = true
log_cli_level = "warn"
pythonpath = "src"
testpaths = ["tests/core"]

[tool.black]
exclude = '''
/(
    \.git
  | \.tox
)/
'''
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
skip_gitignore = true

[tool.coverage.run]
source = ["src"]
omit = [
  "*/_aliases/*"
]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "except ImportError:",
]

[tool.ruff]
lint.select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
lint.extend-ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
  "B028",   # No explicit stacklevel
  "EM101",  # Exception must not use a string literal
  "EM102",  # Exception must not use an f-string literal
  "G004",   # f-string in Logging statement
  "RUF015", # Prefer next(iter())
  "RET505", # Unnecessary `elif` after `return`
]
lint.typing-modules = ["mypackage._compat.typing"]
src = ["src"]
lint.unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
exclude = []
lint.flake8-unused-arguments.ignore-variadic-names = true
extend-exclude = ["tests", "src/quacc/settings.py", "src/quacc/schemas/cclib.py"]
lint.pydocstyle.convention = "numpy"
lint.isort.required-imports = ["from __future__ import annotations"]
lint.isort.known-first-party = ["quacc"]

[tool.docformatter]
pre-summary-newline = true
black = true

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
no_implicit_optional = false
disable_error_code = "annotation-unchecked"
